Return a users banned tags
