# app/backend/src/types/User.ts
@@ -1,4 +1,9 @@
 export default interface User {
   id: number
   name: string
+
+  // ID -> name
+  bannedTags: Map<number, string>
+  // ID -> name
+  bannedIngredients: Map<number, string>
 }
